runnable on cluster

--- a/coe_2.0/conf/query_TemplateLocal.properties
+++ b/coe_2.0/conf/query_TemplateLocal.properties
@@ -8,7 +8,7 @@ hive-write-data-format=parquet
 secondTable_partition_col = CLM_SOR_CD
 firstTable_partition_col = city
 
-inputFilePath=C:\\Users\\yuntliu\\Documents\\workstation\\Study\\IntelliJ\\InteliJSpark22COE\\data
+inputFilePath=C:\\java\\git\\repos\\coe_2.0\\data
 firstFileName=testdata_combined.csv
 inputColumnList="source_rowID,first_name,last_name,street,city,state,zip,phone,email,source,rowID"
 
