--- a/coe_2.0/pom.xml
+++ b/coe_2.0/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.anthem</groupId>
 	<artifactId>CenterOfExcellence</artifactId>
 	<version>2.0.0</version>
-	<name>PADP DATA HPIP InteliJSpark22COE</name>
+	<name>Data Processing Spark22</name>
 	<description></description>
 	<inceptionYear>2017</inceptionYear>
 
@@ -37,7 +37,7 @@
 		<!-- <scala.tools.version>2.10</scala.tools.version> <scala.version>2.10.5</scala.version>
 			<spark.version>1.6.0-cdh5.8.3</spark.version> -->
 		<scala.tools.version>2.11</scala.tools.version>
-		<scala.version>2.11.7</scala.version>
+		<scala.version>2.11.8</scala.version>
 		<spark.version>2.2.0.cloudera1</spark.version>
 
 	<!--	<spark.version>2.2.0</spark.version>-->
@@ -45,19 +45,59 @@
 	</properties>
 
 	<dependencies>
+	
+	
+	
+	
+	<!-- When build to Deploy -->
+	
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-core_${scala.tools.version}</artifactId>
 			<version>${spark.version}</version>
-			<!--<scope>provided</scope>-->
-			<scope>compile</scope>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-sql_${scala.tools.version}</artifactId>
 			<version>${spark.version}</version>
-		<!--	<scope>provided</scope>-->
+		<scope>provided</scope>
+
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-hive_${scala.tools.version}</artifactId>
+			<version>${spark.version}</version>
+		<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-catalyst_${scala.tools.version}</artifactId>
+			<version>${spark.version}</version>
+		<scope>provided</scope>
+		</dependency>
+  
+<!-- End of When build to deploy -->
+
+
+<!-- When build to run local -->
+
+<!--
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-core_${scala.tools.version}</artifactId>
+			<version>${spark.version}</version>
+
+		<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-sql_${scala.tools.version}</artifactId>
+			<version>${spark.version}</version>
 			<scope>compile</scope>
 		</dependency>
 
@@ -65,7 +105,6 @@
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-hive_${scala.tools.version}</artifactId>
 			<version>${spark.version}</version>
-		<!--	<scope>provided</scope>-->
 			<scope>compile</scope>
 		</dependency>
 
@@ -73,9 +112,13 @@
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-catalyst_${scala.tools.version}</artifactId>
 			<version>${spark.version}</version>
-		<!--	<scope>provided</scope>-->
 			<scope>compile</scope>
 		</dependency>
+-->
+<!-- End of When build to run local -->
+
+
+
 
 		<dependency>
 			<groupId>com.databricks</groupId>
@@ -176,6 +219,19 @@
 				<artifactId>maven-shade-plugin</artifactId>
 				<version>2.4.3</version>
 				<configuration>
+
+<!--     <filters>
+        <filter>
+            <artifact>*:*</artifact>
+            <excludes>
+                <exclude>META-INF/*.SF</exclude>
+                <exclude>META-INF/*.DSA</exclude>
+                <exclude>META-INF/*.RSA</exclude>
+            </excludes>
+        </filter>
+    </filters> -->
+    <!-- Additional configuration. -->
+
 				</configuration>
 				<executions>
 					<execution>
