Add Drools Test

--- a/coe_2.0/conf/query_TemplateLocal.properties
+++ b/coe_2.0/conf/query_TemplateLocal.properties
@@ -8,9 +8,12 @@ hive-write-data-format=parquet
 secondTable_partition_col = CLM_SOR_CD
 firstTable_partition_col = city
 
-inputFilePath=C:\\java\\git\\repos\\coe_2.0\\data
+inputFilePath=C:\\java\\git\\repos\\ps_poc\\SmartSelection_ETL\\data
 firstFileName=testdata_combined.csv
 inputColumnList="source_rowID,first_name,last_name,street,city,state,zip,phone,email,source,rowID"
 
 firstTableName=zz_phmp_customer
 secondTableName=zz_phmp_mtclm
+
+DroolsXLSRuleFile=C:\\java\\git\\repos\\ps_poc\\SmartSelection_ETL\\conf\\rules\\DroolsRuleDecisionTableDiscount.xls
+DroolsXLSRuleFileName=DroolsRuleDecisionTableDiscount.xls
