--- a/coe_2.0/conf/query_smartProviderCoe.properties
+++ b/coe_2.0/conf/query_smartProviderCoe.properties
@@ -21,3 +21,16 @@ csvHiveQuery="select  TRIM(CLM_ADJSTMNT_KEY) as CLM_ADJSTMNT_KEY, TRIM(MBRSHP_SO
 HBaseServerUrl="dwbdtest1r1e.wellpoint.com"
 
 HBaseTable="Anthem_PADP:customer"
+
+DroolsXLSRuleFile="/dv/app/ve2/pdp/spfi/phi/no_gbd/r000/control/DroolsRuleDecisionTableDiscount.xls"
+DroolsXLSRuleFileName=DroolsRuleDecisionTableDiscount.xls
+
+DroolsDFCount=2000
+
+DroolsReadDB=zz_product_discount
+
+DroolsWriteDB=zz_product_discount_comp
+
+query_DroolsRead = "select type, discount from  dv_pdpspfiph_nogbd_r000_wh.zz_product_discount"
+
+DroolsHiveDFCount=20
