--- a/coe_2.0/pom.xml
+++ b/coe_2.0/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.anthem</groupId>
-	<artifactId>CenterOfExcellence</artifactId>
+	<artifactId>SmartPCPSelect</artifactId>
 	<version>2.0.0</version>
 	<name>Data Processing Spark22</name>
 	<description></description>
@@ -39,18 +39,15 @@
 		<scala.tools.version>2.11</scala.tools.version>
 		<scala.version>2.11.8</scala.version>
 		<spark.version>2.2.0.cloudera1</spark.version>
-
+		<drools.version>6.2.0.Final</drools.version>
 	<!--	<spark.version>2.2.0</spark.version>-->
 
 	</properties>
 
 	<dependencies>
-	
-	
-	
-	
+
 	<!-- When build to Deploy -->
-	
+
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-core_${scala.tools.version}</artifactId>
@@ -79,13 +76,13 @@
 			<version>${spark.version}</version>
 		<scope>provided</scope>
 		</dependency>
-  
+
 <!-- End of When build to deploy -->
 
 
 <!-- When build to run local -->
 
-<!--
+	<!--
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-core_${scala.tools.version}</artifactId>
@@ -114,7 +111,7 @@
 			<version>${spark.version}</version>
 			<scope>compile</scope>
 		</dependency>
--->
+  -->
 <!-- End of When build to run local -->
 
 
@@ -171,6 +168,36 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>3.17</version>
 		</dependency>
+
+		<!-- The following is for Drools-->
+		<dependency>
+			<groupId>org.drools</groupId>
+			<artifactId>knowledge-api</artifactId>
+			<version>${drools.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.drools</groupId>
+			<artifactId>drools-core</artifactId>
+			<version>${drools.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.drools</groupId>
+			<artifactId>drools-compiler</artifactId>
+			<version>${drools.version}</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.drools</groupId>
+			<artifactId>drools-bom</artifactId>
+			<type>pom</type>
+			<version>${drools.version}</version>
+			<scope>import</scope>
+		</dependency>
+
+
+
+
 	</dependencies>
 
 	<build>
